--- a/Incredible-Movie-App/package.json
+++ b/Incredible-Movie-App/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "^4.0.3",
     "styled-components": "^5.3.3"
